fix,test: added test cases and added connecting in RedisDataSrc#setup (#7)